# Equipos-Rust

./: .clinerules  .cursorrules  .geminirules  .gitignore  COMMANDS.md  Cargo.toml  Constitucion_Asistente_IA_Rust_OT.md  README.md  test_seguridad.ps1
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: audit.rs  auth.rs  crypto.rs  db_manager.rs  excel_import.rs  main.rs  network_scanner.rs  server.rs  splash.rs  tray.rs
crates/server/wix/: main.wxs
crates/viewer/: Cargo.toml  index.css  package.json  tauri.conf.json
crates/viewer/data/viewer_storage/: viewer_server_host
crates/viewer/icons/: icon.icns
crates/viewer/src/: layout.rs  main.rs
crates/viewer/src/components/: equipo_form.rs  form_input.rs  info_group.rs  mod.rs
crates/viewer/src/pages/: audit.rs  equipo_detail.rs  equipo_edit.rs  equipo_list.rs  equipo_new.rs  home.rs  import.rs  login.rs  mod.rs  setup.rs  users.rs
crates/viewer/wix/: License.rtf  main.wxs
