[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Donoso"]
license = "MIT"

[dependencies]
common = { path = "../common" }
dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-desktop = "0.5"
dioxus-sdk = { version = "0.5", features = ["storage"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
webbrowser = "1.2.1"
image = "0.25"

[build-dependencies]
winresource = "0.1"

[package.metadata.wix]
eula = false
